--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -385,6 +385,9 @@
             .catch(console.error);
         }
     </script>
+
+    <script src="/static/admin.js"></script>
+
       
 </head>
 <body>
