--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -636,6 +636,8 @@
             .catch(console.error);
         }
     </script>
+
+    <script src="/static/admin.js"></script>
 </head>
 <body>
     <header>
