--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -380,6 +380,8 @@
         .catch(console.error);
     }
   </script>
+
+  <script src="/static/admin.js"></script>
 </head>
 <body>
   <div id="page-container">
