--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -774,6 +774,8 @@
             .catch(console.error);
         }
     </script>
+
+    <script src="/static/admin.js"></script>
 </head>
 <body>
     <header>
