--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -638,6 +638,7 @@
     </script>
 
     <script src="/static/admin.js"></script>
+    <script src="/static/custom-alert.js"></script>
 </head>
 <body>
     <header>
