--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -382,6 +382,7 @@
   </script>
 
   <script src="/static/admin.js"></script>
+  <script src="/static/custom-alert.js"></script>
 </head>
 <body>
   <div id="page-container">
