--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -1039,6 +1039,7 @@
       margin-top: 10px;
       padding: 5px 10px;
       cursor: pointer;
+      background-color: #3c3c3c;
     }
 
     #add-calendar-form {
@@ -1063,6 +1064,7 @@
   </style>
 
   <script src="/static/admin.js"></script>
+  <script src="/static/custom-alert.js"></script>
 </head>
 <body>
   <header>
