--- a/pythonanywhere/templates/signup.html
+++ b/pythonanywhere/templates/signup.html
@@ -213,6 +213,7 @@
         .catch(console.error);
     }
   </script>
+  <script src="/static/custom-alert.js"></script>
 </head>
 <body>
   <h1 class="page-title">Future Notes</h1>
