--- a/pythonanywhere/templates/database_viewer.html
+++ b/pythonanywhere/templates/database_viewer.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Database Viewer</a>
+    <a class="navbar-brand" href="/admin">Database Viewer</a>
   </nav>
   <div class="container">
     <div id="main-content">
