--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -293,6 +293,8 @@
 
         <button id="update-code" style="background-color: red;">Run updates</button>
 
+        <h2>test</h2>
+
         <!-- Password Confirmation Modal -->
         <div id="password-confirmation-overlay" style="display: none;">
             <div id="password-confirmation-modal">
