--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -291,7 +291,7 @@
 
         <a class="db" href="/database">Database editor</a>
 
-        <button id="scan-updates" style="background-color: gray;">Scan for updates</button>
+        <button id="scan-updates">Scan for updates</button>
         <div id="update-status"></div>
         <button id="run-update" style="display: none; background-color: red;">Run updates</button>
 
