--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -309,6 +309,7 @@
         <div class="button-row">
             <button id="dump-database">Dump Database</button>
             <a class="db" href="/database">Database editor</a>
+            <a class="db" href="/admin-utm-tracking">UTM Tracking</a>
             <button id="scan-updates">Scan for updates</button>
             <div id="update-status"></div>
             <button id="run-update" style="background-color: red;">Run updates</button>
