--- a/pythonanywhere/templates/source_dashboard.html
+++ b/pythonanywhere/templates/source_dashboard.html
@@ -79,5 +79,6 @@
         </table>
     </div>
     <script src="{{ url_for('static', filename='js/source_dashboard.js') }}"></script>
+    <script src="/static/custom-alert.js"></script>
 </body>
 </html>
